set(POLYVKDEVICE_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/Src)

file(GLOB_RECURSE POLYVKDEVICE_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR} 
	${POLYVKDEVICE_INCLUDE}/*.cpp 
	${POLYVKDEVICE_INCLUDE}/*.hpp
	${POLYVKDEVICE_INCLUDE}/*.h)
GenerateSourceGoups("${POLYVKDEVICE_SRCS}")

find_package(Vulkan REQUIRED)

add_library(${VKDEVICE_TARGET} SHARED ${POLYVKDEVICE_SRCS})
target_compile_definitions(${VKDEVICE_TARGET} PRIVATE _DEVICE)
target_include_directories(${VKDEVICE_TARGET} PUBLIC ${POLYVKDEVICE_INCLUDE} ${SDL2_INCLUDE_DIRS})
target_link_libraries(${VKDEVICE_TARGET} PRIVATE ${API_TARGET} ${ENGINE_TARGET} ${SDL2_LIBRARIES} Vulkan::Vulkan)

set_target_properties(${VKDEVICE_TARGET} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "${CMAKE_CURRENT_LIST_DIR}/Src/PolyRenderingDeviceVKPCH.hpp")
set_target_properties(${VKDEVICE_TARGET} PROPERTIES FOLDER "Engine" )
cotire(${VKDEVICE_TARGET})